--- a/lidar_tests/package.xml
+++ b/lidar_tests/package.xml
@@ -12,6 +12,7 @@
   <depend>tf2_ros</depend>
   <depend>tf_conversions</depend>
   <depend>geometry_msgs</depend>
+  <depend>gps_common</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
