added Open3D support and extended README

--- a/field_building/CMakeLists.txt
+++ b/field_building/CMakeLists.txt
@@ -2,10 +2,11 @@ cmake_minimum_required(VERSION 3.0.2)
 project(field_building)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-add_compile_options(-std=c++2a)
+##add_compile_options(-std=c++2a)
+set(CMAKE_CXX_STANDARD 20)
 
 ## Find catkin macros and libraries
-find_package(catkin REQUIRED
+find_package(catkin REQUIRED COMPONENTS
 	roscpp
 	tf2_ros
 	pcl_ros
@@ -17,6 +18,8 @@ find_package(catkin REQUIRED
 
 ## System dependencies are found with CMake's conventions
 find_package(glog)
+
+
 
 ###################################
 ## catkin specific configuration ##
@@ -47,6 +50,18 @@ target_link_libraries(cloud_aggregator
 add_executable(utm_odometry_node src/utm_odometry_node.cpp)
 set_target_properties(utm_odometry_node PROPERTIES OUTPUT_NAME "utm_odometry_node")
 target_link_libraries(utm_odometry_node ${catkin_LIBRARIES})
+
+IF(${USE_OPEN3D})
+	find_package(Open3D REQUIRED)
+	add_executable(open3d_cloud_aggregator
+		src/opend3d_cloud_aggregator.cpp)
+	target_link_libraries(open3d_cloud_aggregator
+		${catkin_LIBRARIES}
+		glog
+		${Open3D_LIBRARIES}
+	)
+ENDIF()
+
 
 #############
 ## Install ##
